--- a/about.html
+++ b/about.html
@@ -20,21 +20,80 @@
             </div>
             <h2 class="subpage-title">GIỚI THIỆU</h2>
             <p class="subpage-description">Chúng tôi tin rằng mọi cảm xúc đều có giá trị và xứng đáng được lắng nghe.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Cảm xúc không phải kẻ thù, mà là người thầy." - Thế Giới Cảm Xúc
+            </blockquote>
         </div>
 
         <div class="about-content">
             <div class="content-card">
-                <h3>Sứ Mệnh Của Chúng Tôi</h3>
+                <h3>🎯 Sứ Mệnh Của Chúng Tôi</h3>
                 <p>Thế Giới Cảm Xúc được tạo ra với sứ mệnh giúp mọi người hiểu, chấp nhận và trân trọng tất cả các loại cảm xúc của mình. Chúng tôi tin rằng không có cảm xúc nào là "xấu" hay "tốt" - mỗi cảm xúc đều mang một thông điệp và giá trị riêng.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giáo dục về thế giới cảm xúc</li>
+                    <li>Khuyến khích trí tuệ cảm xúc (EQ)</li>
+                    <li>Hỗ trợ phát triển cá nhân</li>
+                    <li>Xây dựng cộng đồng hỗ trợ</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Tại Sao Cảm Xúc Quan Trọng?</h3>
-                <p>Cảm xúc là phần cốt lõi làm nên con người chúng ta. Chúng giúp chúng ta kết nối với người khác, đưa ra quyết định, và trải nghiệm cuộc sống một cách trọn vẹn. Hiểu được cảm xúc của bản thân là bước đầu tiên để sống một cuộc đời ý nghĩa và hạnh phúc.</p>
+                <h3>🧠 Tại Sao Cảm Xúc Quan Trọng?</h3>
+                <p>Cảm xúc là phần cốt lõi làm nên con người chúng ta. Chúng giúp chúng ta kết nối với người khác, đưa ra quyết định, và trải nghiệm cuộc sống một cách trọn vẹn.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Kết nối:</strong> Xây dựng mối quan hệ sâu sắc</li>
+                    <li><strong>Quyết định:</strong> Hướng dẫn lựa chọn đúng đắn</li>
+                    <li><strong>Phát triển:</strong> Học hỏi từ kinh nghiệm</li>
+                    <li><strong>Sức khỏe:</strong> Ảnh hưởng trực tiếp đến thể chất</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Hiểu cảm xúc = Hiểu bản thân! 💡</p>
             </div>
             <div class="content-card">
-                <h3>Triết Lý Của Chúng Tôi</h3>
-                <p>"Hãy để cảm xúc dẫn lối, đừng để chúng điều khiển." Chúng tôi khuyến khích việc lắng nghe cảm xúc, học hỏi từ chúng, và sử dụng chúng như công cụ để phát triển bản thân thay vì bị chúng chi phối.</p>
+                <h3>🌟 Triết Lý Của Chúng Tôi</h3>
+                <p>"Hãy để cảm xúc dẫn lối, đừng để chúng điều khiển." Chúng tôi khuyến khích việc lắng nghe cảm xúc, học hỏi từ chúng, và sử dụng chúng như công cụ để phát triển bản thân.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Lắng nghe:</strong> Chấp nhận mọi cảm xúc</li>
+                    <li><strong>Học hỏi:</strong> Tìm hiểu ý nghĩa đằng sau</li>
+                    <li><strong>Sử dụng:</strong> Biến cảm xúc thành sức mạnh</li>
+                    <li><strong>Cân bằng:</strong> Giữa cảm xúc và lý trí</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>📈 Mục Tiêu & Tầm Nhìn</h3>
+                <p>Chúng tôi hướng đến việc tạo ra một thế giới nơi mọi người có thể:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Thể hiện cảm xúc một cách lành mạnh</li>
+                    <li>Hiểu và đồng cảm với người khác</li>
+                    <li>Sử dụng cảm xúc để đạt được tiềm năng tối đa</li>
+                    <li>Xây dựng mối quan hệ bền vững</li>
+                    <li>Trải nghiệm cuộc sống viên mãn</li>
+                </ul>
+            </div>
+            <div class="content-card">
+                <h3>👥 Đội Ngũ Của Chúng Tôi</h3>
+                <p>Chúng tôi là một nhóm những người đam mê tâm lý học, giáo dục và công nghệ, cam kết mang kiến thức về cảm xúc đến với mọi người.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Nhà tâm lý học:</strong> Chuyên gia về cảm xúc và hành vi</li>
+                    <li><strong>Nhà giáo dục:</strong> Phát triển nội dung và chương trình học</li>
+                    <li><strong>Nhà thiết kế:</strong> Tạo trải nghiệm người dùng hấp dẫn</li>
+                    <li><strong>Nhà phát triển:</strong> Xây dựng công cụ và nền tảng</li>
+                </ul>
+            </div>
+            <div class="content-card">
+                <h3>🤝 Gia Nhập Cộng Đồng</h3>
+                <p>Thế Giới Cảm Xúc không chỉ là một website - mà là một cộng đồng nơi mọi người có thể:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Chia sẻ trải nghiệm cảm xúc</li>
+                    <li>Học hỏi từ người khác</li>
+                    <li>Nhận hỗ trợ khi cần thiết</li>
+                    <li>Đóng góp cho sự phát triển của cộng đồng</li>
+                </ul>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #667eea, #764ba2); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">💌 Liên Hệ Với Chúng Tôi</h3>
+            <p style="margin-bottom: 1.5rem;">Bạn có câu hỏi, góp ý, hoặc muốn hợp tác? Hãy liên hệ ngay!</p>
+            <a href="contact.html" style="background: white; color: #667eea; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Liên Hệ Ngay</a>
         </div>
     </main>
 
