--- a/angry.html
+++ b/angry.html
@@ -18,21 +18,60 @@
             <div class="subpage-icon">😠</div>
             <h2 class="subpage-title">TỨC GIẬN</h2>
             <p class="subpage-description">Phản ứng khi bị đối xử bất công hoặc vi phạm ranh giới. Giận dữ là tín hiệu cho thấy ranh giới của bạn đang bị xâm phạm.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Giận dữ là gió thổi tắt ngọn nến của lý trí." - Proverb
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Siêu Năng Lực</h3>
-                <p>Tăng sức mạnh tức thời! Khi giận, cơ thể tiết adrenaline - giúp bạn mạnh mẽ như siêu nhân trong 30 giây.</p>
+                <h3>⚡ Siêu Năng Lực Của Sự Giận Dữ</h3>
+                <p>Tăng sức mạnh tức thời! Khi giận, cơ thể tiết adrenaline - giúp bạn mạnh mẽ như siêu nhân trong 30 giây. Cơ chế sinh học:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tăng nhịp tim và huyết áp</li>
+                    <li>Giải phóng năng lượng chiến đấu hoặc bỏ chạy</li>
+                    <li>Tăng cường tập trung và quyết đoán</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Sự Thật Thú Vị</h3>
-                <p>Tim đập nhanh hơn 20-30 nhịp/phút khi giận. Nhiệt độ cơ thể cũng tăng lên đáng kể trong cơn giận.</p>
+                <h3>📊 Hiệu Ứng Sinh Lý</h3>
+                <p>Tim đập nhanh hơn 20-30 nhịp/phút khi giận! Những thay đổi thú vị:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Nhiệt độ cơ thể tăng 1-2 độ C</li>
+                    <li>Má đỏ ửng, cơ mặt căng cứng</li>
+                    <li>Giảm khả năng suy nghĩ logic</li>
+                    <li>Tăng sức mạnh vật lý tạm thời</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Giận dữ là phản ứng tự vệ tự nhiên! 🛡️</p>
             </div>
             <div class="content-card">
-                <h3>Cách Điều Chỉnh</h3>
-                <p>Hít thở sâu, đếm đến 10, hoặc rời khỏi tình huống gây giận. Hãy chuyển hóa năng lượng giận dữ thành hành động tích cực.</p>
+                <h3>🧘 Cách Điều Chỉnh Sự Giận Dữ</h3>
+                <p>Hít thở sâu, đếm đến 10, hoặc rời khỏi tình huống gây giận. Chiến lược hiệu quả:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Kỹ thuật thở:</strong> Hít sâu 4 giây, giữ 4 giây, thở ra 4 giây</li>
+                    <li><strong>Tạm dừng:</strong> Rời khỏi tình huống để bình tĩnh</li>
+                    <li><strong>Thể hiện:</strong> Nói "Tôi đang giận" thay vì tấn công</li>
+                    <li><strong>Chuyển hóa:</strong> Tập thể dục hoặc hoạt động sáng tạo</li>
+                    <li><strong>Phân tích:</strong> Xác định nguyên nhân gốc rễ</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>🔍 Giận Dữ Lành Mạnh vs Phá Hủy</h3>
+                <p>Giận dữ có thể là công cụ hoặc kẻ thù:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Lành mạnh:</strong> Bảo vệ ranh giới, thúc đẩy thay đổi</li>
+                    <li><strong>Phá hủy:</strong> Gây tổn thương bản thân và người khác</li>
+                    <li><strong>Cấu trúc:</strong> Giận dữ kéo dài gây stress mãn tính</li>
+                    <li><strong>Bài học:</strong> Học cách thể hiện giận dữ một cách xây dựng</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold;">Giận dữ là thông điệp - hãy lắng nghe nó!</p>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #ff4500, #ff6347); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🌈 Sẵn Sàng Chuyển Sang Năng Lượng Tích Cực?</h3>
+            <p style="margin-bottom: 1.5rem;">Sau cơn giận, hãy tìm sự bình yên và hạnh phúc!</p>
+            <a href="excited.html" style="background: white; color: #ff4500; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Khám Phá Sự Hào Hứng</a>
         </div>
     </main>
 
