--- a/emotions.html
+++ b/emotions.html
@@ -18,25 +18,82 @@
             <div class="subpage-icon">🎭</div>
             <h2 class="subpage-title">THẾ GIỚI CẢM XÚC</h2>
             <p class="subpage-description">Khám phá toàn bộ phổ cảm xúc của con người - từ cơ bản đến phức tạp, từ tích cực đến tiêu cực.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Cảm xúc là ngôn ngữ của tâm hồn." - Carl Jung
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>6 Cảm Xúc Cơ Bản</h3>
+                <h3>🎨 6 Cảm Xúc Cơ Bản</h3>
                 <p>Vui, buồn, giận, sợ, ngạc nhiên, và ghê tởm. Đây là 6 cảm xúc được công nhận trên toàn thế giới, vượt qua mọi rào cản văn hóa.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Vui:</strong> Sự hài lòng và hạnh phúc</li>
+                    <li><strong>Buồn:</strong> Sự mất mát và cô đơn</li>
+                    <li><strong>Giận:</strong> Sự bất công và vi phạm</li>
+                    <li><strong>Sợ:</strong> Sự đe dọa và nguy hiểm</li>
+                    <li><strong>Ngạc nhiên:</strong> Sự bất ngờ và mới mẻ</li>
+                    <li><strong>Ghê tởm:</strong> Sự phản cảm và từ chối</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Cảm Xúc Phức Tạp</h3>
+                <h3>🌀 Cảm Xúc Phức Tạp</h3>
                 <p>Ghen tuông, xấu hổ, tự hào, tội lỗi, hy vọng... Những cảm xúc này là sự kết hợp của nhiều cảm xúc cơ bản khác nhau.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Ghen tuông:</strong> Sợ mất mát + giận dữ</li>
+                    <li><strong>Tự hào:</strong> Hạnh phúc + tự tin</li>
+                    <li><strong>Tội lỗi:</strong> Buồn bã + tự trách</li>
+                    <li><strong>Hy vọng:</strong> Mong đợi tích cực</li>
+                    <li><strong>Xấu hổ:</strong> Sợ bị đánh giá tiêu cực</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Vai Trò Của Cảm Xúc</h3>
+                <h3>🧭 Vai Trò Của Cảm Xúc</h3>
                 <p>Cảm xúc giúp chúng ta đưa ra quyết định, kết nối với người khác, và phản ứng phù hợp với môi trường xung quanh.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Quyết định:</strong> Hướng dẫn lựa chọn</li>
+                    <li><strong>Kết nối:</strong> Xây dựng mối quan hệ</li>
+                    <li><strong>Phản ứng:</strong> Bảo vệ và thích nghi</li>
+                    <li><strong>Học hỏi:</strong> Nhớ kinh nghiệm</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Trí Tuệ Cảm Xúc</h3>
+                <h3>🧠 Trí Tuệ Cảm Xúc (EQ)</h3>
                 <p>Khả năng nhận biết, hiểu và quản lý cảm xúc của bản thân và người khác. Đây là chìa khóa cho thành công trong cuộc sống.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Tự nhận thức:</strong> Nhận biết cảm xúc của mình</li>
+                    <li><strong>Tự điều chỉnh:</strong> Quản lý phản ứng</li>
+                    <li><strong>Động lực:</strong> Sử dụng cảm xúc tích cực</li>
+                    <li><strong>Đồng cảm:</strong> Hiểu cảm xúc người khác</li>
+                    <li><strong>Kỹ năng xã hội:</strong> Xây dựng mối quan hệ</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>🌍 Cảm Xúc Trong Văn Hóa</h3>
+                <p>Mỗi nền văn hóa có những cảm xúc đặc trưng:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Nhật Bản:</strong> "Mono no aware" - nỗi buồn về sự vô thường</li>
+                    <li><strong>Đức:</strong> "Schadenfreude" - vui khi người khác gặp xui</li>
+                    <li><strong>Philippines:</strong> "Gigip" - cảm giác ghen tị</li>
+                    <li><strong>Đan Mạch:</strong> "Hygge" - sự ấm áp và thoải mái</li>
+                </ul>
+            </div>
+            <div class="content-card">
+                <h3>⚖️ Cảm Xúc Tích Cực vs Tiêu Cực</h3>
+                <p>Không có cảm xúc "tốt" hay "xấu" - tất cả đều có giá trị:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Tích cực:</strong> Hạnh phúc, yêu thương, hào hứng</li>
+                    <li><strong>Tiêu cực:</strong> Buồn bã, giận dữ, sợ hãi</li>
+                    <li><strong>Giá trị:</strong> Cả hai đều cung cấp thông tin quan trọng</li>
+                    <li><strong>Cân bằng:</strong> Học cách quản lý và sử dụng</li>
+                </ul>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #9370db, #8a2be2); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🔍 Khám Phá Sự Thật Thú Vị?</h3>
+            <p style="margin-bottom: 1.5rem;">Hãy tìm hiểu thêm về khoa học đằng sau cảm xúc!</p>
+            <a href="facts.html" style="background: white; color: #8a2be2; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Sự Thật Thú Vị</a>
         </div>
     </main>
 
