--- a/excited.html
+++ b/excited.html
@@ -18,21 +18,61 @@
             <div class="subpage-icon">🤩</div>
             <h2 class="subpage-title">HÀO HỨNG</h2>
             <p class="subpage-description">Năng lượng tích cực, tràn đầy hy vọng về tương lai. Hào hứng là chất xúc tác cho sự sáng tạo và học hỏi.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Sự hào hứng là sức mạnh lớn nhất của con người." - Ralph Waldo Emerson
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Siêu Năng Lực</h3>
-                <p>Kích hoạt trí tưởng tượng! Não bộ giải phóng dopamine - "hormone hạnh phúc" giúp bạn sáng tạo không giới hạn.</p>
+                <h3>🚀 Siêu Năng Lực Của Sự Hào Hứng</h3>
+                <p>Kích hoạt trí tưởng tượng! Não bộ giải phóng dopamine - "hormone hạnh phúc" giúp bạn sáng tạo không giới hạn. Khi hào hứng:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tăng khả năng tập trung và sáng tạo</li>
+                    <li>Cải thiện trí nhớ và học hỏi</li>
+                    <li>Tạo động lực hành động</li>
+                    <li>Giảm cảm giác mệt mỏi</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Sự Thật Thú Vị</h3>
-                <p>Trẻ em hào hứng học nhanh hơn 40%. Hào hứng còn giúp tăng cường trí nhớ và khả năng giải quyết vấn đề.</p>
+                <h3>📈 Tác Động Đến Học Tập & Công Việc</h3>
+                <p>Trẻ em hào hứng học nhanh hơn 40%! Hào hứng còn giúp:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tăng cường trí nhớ dài hạn</li>
+                    <li>Cải thiện khả năng giải quyết vấn đề</li>
+                    <li>Tạo sự kiên trì trong công việc</li>
+                    <li>Giảm tỷ lệ bỏ cuộc</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Hào hứng biến công việc thành đam mê! 💼</p>
             </div>
             <div class="content-card">
-                <h3>Cách Duy Trì</h3>
-                <p>Đặt mục tiêu nhỏ, ăn mừng từng thành công, và luôn tìm kiếm điều mới mẻ để khám phá trong cuộc sống.</p>
+                <h3>🎯 Cách Duy Trì Sự Hào Hứng</h3>
+                <p>Đặt mục tiêu nhỏ, ăn mừng từng thành công, và luôn tìm kiếm điều mới mẻ. Bí quyết:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Mục tiêu nhỏ:</strong> Chia mục tiêu lớn thành bước nhỏ</li>
+                    <li><strong>Ăn mừng:</strong> Tự thưởng cho từng thành tựu</li>
+                    <li><strong>Khám phá:</strong> Thử điều mới mỗi tuần</li>
+                    <li><strong>Kết nối:</strong> Chia sẻ đam mê với người khác</li>
+                    <li><strong>Học hỏi:</strong> Đầu tư vào sở thích cá nhân</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>🌟 Sự Khác Biệt Giữa Hào Hứng & Hạnh Phúc</h3>
+                <p>Hào hứng là năng lượng hướng về tương lai:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Hạnh phúc:</strong> Sự mãn nguyện với hiện tại</li>
+                    <li><strong>Hào hứng:</strong> Mong đợi điều tốt đẹp sắp đến</li>
+                    <li><strong>Kết hợp:</strong> Cả hai tạo nên cuộc sống viên mãn</li>
+                    <li><strong>Động lực:</strong> Hào hứng thúc đẩy hành động</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold;">Hào hứng là cầu nối giữa giấc mơ và hiện thực!</p>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #ff69b4, #ff1493); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🕊️ Sẵn Sàng Tìm Sự Bình Yên?</h3>
+            <p style="margin-bottom: 1.5rem;">Sau khi hào hứng, hãy tìm sự cân bằng với bình yên!</p>
+            <a href="peaceful.html" style="background: white; color: #ff1493; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Khám Phá Bình Yên</a>
         </div>
     </main>
 
