--- a/facts.html
+++ b/facts.html
@@ -18,33 +18,102 @@
             <div class="subpage-icon">🔍</div>
             <h2 class="subpage-title">SỰ THẬT THÚ VỊ VỀ CẢM XÚC</h2>
             <p class="subpage-description">Những điều kỳ diệu mà khoa học đã khám phá về thế giới cảm xúc của con người.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Cảm xúc là cầu nối giữa lý trí và hành động." - Aristotle
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Não Bộ & Cảm Xúc</h3>
-                <p>Não xử lý cảm xúc nhanh hơn 6 lần so với suy nghĩ logic. Hệ limbic là trung tâm điều khiển cảm xúc của não bộ.</p>
+                <h3>🧠 Não Bộ & Cảm Xúc</h3>
+                <p>Não xử lý cảm xúc nhanh hơn 6 lần so với suy nghĩ logic! Hệ limbic là trung tâm điều khiển cảm xúc của não bộ.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Phản ứng cảm xúc chỉ mất 0.1 giây</li>
+                    <li>Hệ limbic bao gồm amygdala và hippocampus</li>
+                    <li>Cảm xúc giúp ghi nhớ kinh nghiệm quan trọng</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Tim Có Trí Tuệ Riêng</h3>
+                <h3>❤️ Tim Có Trí Tuệ Riêng</h3>
                 <p>Tim có hệ thần kinh riêng với hơn 40.000 tế bào thần kinh, có thể "cảm nhận" và phản ứng với cảm xúc độc lập.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Gửi tín hiệu đến não trước khi não nhận biết</li>
+                    <li>Thay đổi nhịp tim theo cảm xúc</li>
+                    <li>Có thể "nhớ" và "học hỏi" từ cảm xúc</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Trẻ Sơ Sinh</h3>
+                <h3>👶 Trẻ Sơ Sinh</h3>
                 <p>Trẻ sơ sinh có thể nhận biết 7 loại cảm xúc cơ bản từ khi mới sinh, và bắt đầu thể hiện cảm xúc từ tuần thứ 6.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Nhận biết khuôn mặt vui/buồn từ ngày đầu</li>
+                    <li>Bắt đầu cười từ tuần thứ 6</li>
+                    <li>Thể hiện giận dữ từ tháng thứ 2</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Văn Hóa & Cảm Xúc</h3>
-                <p>Một số nền văn hóa có những cảm xúc đặc biệt không tồn tại ở nơi khác, như "Schadenfreude" (vui khi người khác gặp xui) trong tiếng Đức.</p>
+                <h3>🌍 Văn Hóa & Cảm Xúc</h3>
+                <p>Một số nền văn hóa có những cảm xúc đặc biệt không tồn tại ở nơi khác.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Đức:</strong> Schadenfreude (vui khi người khác gặp xui)</li>
+                    <li><strong>Nhật:</strong> Mono no aware (buồn về sự vô thường)</li>
+                    <li><strong>Philippines:</strong> Gigip (ghen tị với sở hữu của người khác)</li>
+                    <li><strong>Đan Mạch:</strong> Hygge (sự ấm áp, thoải mái)</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Cảm Xúc & Sức Khỏe</h3>
-                <p>Cảm xúc tiêu cực kéo dài có thể gây ra các vấn đề sức khỏe như tăng huyết áp, suy giảm miễn dịch, và rối loạn tiêu hóa.</p>
+                <h3>🏥 Cảm Xúc & Sức Khỏe</h3>
+                <p>Cảm xúc tiêu cực kéo dài có thể gây ra các vấn đề sức khỏe nghiêm trọng.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tăng huyết áp và nguy cơ đột quỵ</li>
+                    <li>Suy giảm hệ miễn dịch</li>
+                    <li>Rối loạn tiêu hóa và mất ngủ</li>
+                    <li>Tăng nguy cơ trầm cảm</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Ngôn Ngữ Cảm Xúc</h3>
-                <p>Có hơn 300 từ tiếng Anh để mô tả cảm xúc, nhưng nhiều nền văn hóa có những từ độc đáo không thể dịch sang ngôn ngữ khác.</p>
+                <h3>📚 Ngôn Ngữ Cảm Xúc</h3>
+                <p>Có hơn 300 từ tiếng Anh để mô tả cảm xúc, nhưng nhiều nền văn hóa có những từ độc đáo.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tiếng Anh: 300+ từ cảm xúc</li>
+                    <li>Tiếng Đức: Schadenfreude</li>
+                    <li>Tiếng Nhật: Mono no aware</li>
+                    <li>Tiếng Việt: Nhiều từ ghép phong phú</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>⚡ Cảm Xúc & Thời Gian Phản Ứng</h3>
+                <p>Cảm xúc phản ứng nhanh hơn suy nghĩ logic rất nhiều.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Cảm xúc: 0.1 giây</li>
+                    <li>Suy nghĩ logic: 0.6 giây</li>
+                    <li>Phản ứng có ý thức: 2-3 giây</li>
+                </ul>
+            </div>
+            <div class="content-card">
+                <h3>🎭 Cảm Xúc & Biểu Cảm</h3>
+                <p>Biểu cảm khuôn mặt là ngôn ngữ cảm xúc phổ quát.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>6 biểu cảm cơ bản được nhận biết toàn cầu</li>
+                    <li>Trẻ em học biểu cảm từ 6 tháng tuổi</li>
+                    <li>Mắt là cửa sổ tâm hồn</li>
+                </ul>
+            </div>
+            <div class="content-card">
+                <h3>💪 Cảm Xúc & Sức Mạnh</h3>
+                <p>Cảm xúc có thể tăng sức mạnh vật lý đáng kể.</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giận dữ: Tăng sức mạnh 20-30%</li>
+                    <li>Hào hứng: Cải thiện hiệu suất</li>
+                    <li>Sợ hãi: Tăng tốc độ phản ứng</li>
+                </ul>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #ff6b6b, #4ecdc4); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">📖 Muốn Biết Thêm Về Chúng Tôi?</h3>
+            <p style="margin-bottom: 1.5rem;">Hãy tìm hiểu sứ mệnh và triết lý của Thế Giới Cảm Xúc!</p>
+            <a href="about.html" style="background: white; color: #ff6b6b; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Giới Thiệu Về Chúng Tôi</a>
         </div>
     </main>
 
