--- a/happy.html
+++ b/happy.html
@@ -18,21 +18,58 @@
             <div class="subpage-icon">😄</div>
             <h2 class="subpage-title">HẠNH PHÚC</h2>
             <p class="subpage-description">Cảm giác vui vẻ, mãn nguyện khi mọi thứ diễn ra như mong muốn. Hạnh phúc là trạng thái tinh thần tích cực nhất của con người.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Hạnh phúc không phải là đích đến, mà là cách đi." - Warren Buffett
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Siêu Năng Lực</h3>
-                <p>Làm sáng bừng cả căn phòng! Khi bạn hạnh phúc, não bộ tiết ra endorphin - "thuốc giảm đau tự nhiên" của cơ thể.</p>
+                <h3>🔥 Siêu Năng Lực Của Hạnh Phúc</h3>
+                <p>Làm sáng bừng cả căn phòng! Khi bạn hạnh phúc, não bộ tiết ra endorphin - "thuốc giảm đau tự nhiên" của cơ thể. Điều này giúp:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giảm đau và căng thẳng</li>
+                    <li>Tăng cường hệ miễn dịch</li>
+                    <li>Cải thiện tâm trạng tổng thể</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Sự Thật Thú Vị</h3>
-                <p>Cười 100 lần tương đương với 15 phút tập thể dục. Hạnh phúc còn giúp tăng cường hệ miễn dịch và kéo dài tuổi thọ.</p>
+                <h3>📊 Sự Thật Thú Vị</h3>
+                <p>Cười 100 lần tương đương với 15 phút tập thể dục! Hạnh phúc còn giúp:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Tăng cường hệ miễn dịch lên đến 20%</li>
+                    <li>Kéo dài tuổi thọ trung bình 7-10 năm</li>
+                    <li>Giảm nguy cơ bệnh tim mạch</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Bạn đã cười bao nhiêu lần hôm nay? 😊</p>
             </div>
             <div class="content-card">
-                <h3>Cách Nuôi Dưỡng</h3>
-                <p>Thực hành lòng biết ơn hàng ngày, dành thời gian cho người thân yêu, và tìm niềm vui trong những điều nhỏ bé.</p>
+                <h3>🌱 Cách Nuôi Dưỡng Hạnh Phúc</h3>
+                <p>Thực hành những thói quen đơn giản này để tăng cường hạnh phúc hàng ngày:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Lòng biết ơn:</strong> Ghi nhật ký 3 điều bạn biết ơn mỗi tối</li>
+                    <li><strong>Kết nối:</strong> Dành thời gian chất lượng với người thân yêu</li>
+                    <li><strong>Chú ý:</strong> Tìm niềm vui trong những điều nhỏ bé như tách cà phê buổi sáng</li>
+                    <li><strong>Chăm sóc bản thân:</strong> Nghe nhạc yêu thích, tập thể dục nhẹ nhàng</li>
+                    <li><strong>Học hỏi:</strong> Thử điều mới mẻ mỗi tuần</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>💡 Bài Học Từ Khoa Học</h3>
+                <p>Hạnh phúc không phải là đích đến mà là hành trình. Nghiên cứu cho thấy:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>50% hạnh phúc đến từ gen di truyền</li>
+                    <li>10% từ hoàn cảnh bên ngoài</li>
+                    <li>40% từ suy nghĩ và hành động của chúng ta</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold;">Bạn có thể kiểm soát 40% hạnh phúc của mình!</p>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #ffd93d, #ff6b6b); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🚀 Sẵn Sàng Khám Phá Cảm Xúc Khác?</h3>
+            <p style="margin-bottom: 1.5rem;">Mỗi cảm xúc đều có sức mạnh riêng. Hãy tiếp tục hành trình khám phá!</p>
+            <a href="emotions.html" style="background: white; color: #ff6b6b; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Khám Phá Thế Giới Cảm Xúc</a>
         </div>
     </main>
 
