--- a/peaceful.html
+++ b/peaceful.html
@@ -18,21 +18,61 @@
             <div class="subpage-icon">😌</div>
             <h2 class="subpage-title">BÌNH YÊN</h2>
             <p class="subpage-description">Trạng thái tâm trí thư thái, không lo âu. Bình yên là nền tảng cho sự sáng suốt và hạnh phúc lâu dài.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Bình yên không phải là không có bão tố, mà là học cách khiêu vũ trong mưa." - Vivian Greene
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Siêu Năng Lực</h3>
-                <p>Tái tạo năng lượng! Trạng thái bình yên giúp cơ thể phục hồi 300% nhanh hơn sau stress và căng thẳng.</p>
+                <h3>🌿 Siêu Năng Lực Của Sự Bình Yên</h3>
+                <p>Tái tạo năng lượng! Trạng thái bình yên giúp cơ thể phục hồi 300% nhanh hơn sau stress và căng thẳng. Lợi ích:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giảm cortisol (hormone stress)</li>
+                    <li>Cải thiện chức năng miễn dịch</li>
+                    <li>Tăng khả năng tập trung</li>
+                    <li>Giảm nguy cơ bệnh tim mạch</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Sự Thật Thú Vị</h3>
-                <p>10 phút thiền mỗi ngày tương đương với 1 giờ ngủ ngon. Bình yên còn giúp giảm huyết áp và cải thiện giấc ngủ.</p>
+                <h3>🧘‍♀️ Khoa Học Về Thiền Định</h3>
+                <p>10 phút thiền mỗi ngày tương đương với 1 giờ ngủ ngon! Nghiên cứu chứng minh:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giảm huyết áp và nhịp tim</li>
+                    <li>Cải thiện chất lượng giấc ngủ</li>
+                    <li>Tăng mật độ chất xám não bộ</li>
+                    <li>Giảm triệu chứng trầm cảm và lo âu</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Thiền định là "gym" cho tâm trí! 🧠</p>
             </div>
             <div class="content-card">
-                <h3>Cách Tạo Dựng</h3>
-                <p>Thiền định, đi bộ trong thiên nhiên, nghe nhạc nhẹ nhàng, hoặc đơn giản là ngồi yên và hít thở sâu.</p>
+                <h3>🌸 Cách Tạo Dựng Sự Bình Yên</h3>
+                <p>Thiền định, đi bộ trong thiên nhiên, nghe nhạc nhẹ nhàng. Các phương pháp hiệu quả:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Thiền định:</strong> Bắt đầu với 5 phút mỗi ngày</li>
+                    <li><strong>Thiên nhiên:</strong> Đi bộ, ngắm cảnh, nghe tiếng lá</li>
+                    <li><strong>Âm nhạc:</strong> Nhạc không lời, âm thanh tự nhiên</li>
+                    <li><strong>Hít thở:</strong> Kỹ thuật 4-7-8 hoặc box breathing</li>
+                    <li><strong>Mindfulness:</strong> Tập trung vào hiện tại</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>⚖️ Bình Yên vs Apathy (Vô cảm)</h3>
+                <p>Bình yên là sức mạnh, không phải thụ động:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Bình yên:</strong> Chấp nhận mà vẫn hành động</li>
+                    <li><strong>Vô cảm:</strong> Không quan tâm, thờ ơ</li>
+                    <li><strong>Sức mạnh:</strong> Bình yên cho phép phản ứng khôn ngoan</li>
+                    <li><strong>Cân bằng:</strong> Giữa chấp nhận và thay đổi</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold;">Bình yên là nền tảng cho hành động có ý nghĩa!</p>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #32cd32, #228b22); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🎭 Khám Phá Tất Cả Cảm Xúc?</h3>
+            <p style="margin-bottom: 1.5rem;">Bình yên là khởi đầu. Hãy tìm hiểu về tất cả các loại cảm xúc!</p>
+            <a href="emotions.html" style="background: white; color: #228b22; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Thế Giới Cảm Xúc</a>
         </div>
     </main>
 
