--- a/sad.html
+++ b/sad.html
@@ -18,21 +18,59 @@
             <div class="subpage-icon">😢</div>
             <h2 class="subpage-title">BUỒN BÃ</h2>
             <p class="subpage-description">Cảm xúc khi mất mát, thất vọng hoặc cô đơn. Buồn bã giúp ta suy ngẫm sâu sắc và trưởng thành hơn.</p>
+            <blockquote style="font-style: italic; color: #666; margin-top: 1rem; text-align: center;">
+                "Nước mắt là ngôn ngữ của tâm hồn khi không thể nói." - Paulo Coelho
+            </blockquote>
         </div>
 
         <div class="content-grid">
             <div class="content-card">
-                <h3>Siêu Năng Lực</h3>
-                <p>Giúp ta suy ngẫm sâu sắc! Nước mắt chứa hormone stress - khóc giúp giải tỏa độc tố cảm xúc và làm sạch tâm hồn.</p>
+                <h3>💧 Siêu Năng Lực Của Nước Mắt</h3>
+                <p>Giúp ta suy ngẫm sâu sắc! Nước mắt chứa hormone stress - khóc giúp giải tỏa độc tố cảm xúc và làm sạch tâm hồn. Khi buồn:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Não bộ giải phóng oxytocin và endorphin</li>
+                    <li>Giảm căng thẳng và lo âu</li>
+                    <li>Tạo không gian cho sự chữa lành</li>
+                </ul>
             </div>
             <div class="content-card">
-                <h3>Sự Thật Thú Vị</h3>
-                <p>Người trưởng thành khóc trung bình 72 lần mỗi năm. Phụ nữ khóc nhiều hơn nam giới khoảng 4-5 lần.</p>
+                <h3>📊 Sự Thật Thú Vị Về Việc Khóc</h3>
+                <p>Người trưởng thành khóc trung bình 72 lần mỗi năm! Thống kê thú vị:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Phụ nữ khóc nhiều hơn nam giới khoảng 4-5 lần</li>
+                    <li>Trẻ em khóc trung bình 2 tiếng mỗi ngày</li>
+                    <li>80% nước mắt khi buồn chứa protein chống stress</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold; color: var(--primary);">Khóc là cách tự nhiên để chữa lành! 🌧️</p>
             </div>
             <div class="content-card">
-                <h3>Cách Chữa Lành</h3>
-                <p>Cho phép bản thân cảm nhận nỗi buồn, chia sẻ với người tin cậy, và nhớ rằng mọi cảm xúc đều sẽ qua đi.</p>
+                <h3>🌈 Cách Chữa Lành Nỗi Buồn</h3>
+                <p>Đừng chối bỏ nỗi buồn - hãy học cách đối diện và chữa lành:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li><strong>Cho phép cảm nhận:</strong> Đừng kìm nén, hãy để nỗi buồn trôi qua</li>
+                    <li><strong>Chia sẻ:</strong> Nói chuyện với người tin cậy hoặc viết nhật ký</li>
+                    <li><strong>Chăm sóc bản thân:</strong> Ăn uống lành mạnh, tập thể dục nhẹ nhàng</li>
+                    <li><strong>Tìm hỗ trợ:</strong> Tư vấn viên hoặc nhóm hỗ trợ nếu cần</li>
+                    <li><strong>Thời gian:</strong> Nhớ rằng mọi cảm xúc đều tạm thời</li>
+                </ul>
             </div>
+            <div class="content-card">
+                <h3>🧠 Tại Sao Buồn Bã Quan Trọng?</h3>
+                <p>Buồn bã không phải kẻ thù mà là người thầy:</p>
+                <ul style="padding-left: 1.5rem; color: #555;">
+                    <li>Giúp chúng ta đánh giá lại giá trị cuộc sống</li>
+                    <li>Tạo cơ hội cho sự đồng cảm và kết nối</li>
+                    <li>Khuyến khích sự trưởng thành và thay đổi</li>
+                    <li>Nhắc nhở về sự mong manh của cuộc sống</li>
+                </ul>
+                <p style="margin-top: 1rem; font-weight: bold;">Buồn bã là cầu nối đến hạnh phúc sâu sắc hơn!</p>
+            </div>
+        </div>
+
+        <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, #4169e1, #1e90ff); border-radius: 15px; color: white;">
+            <h3 style="margin-bottom: 1rem;">🌟 Sẵn Sàng Chuyển Hướng Sang Năng Lượng Tích Cực?</h3>
+            <p style="margin-bottom: 1.5rem;">Sau cơn mưa luôn có cầu vồng. Hãy khám phá những cảm xúc khác!</p>
+            <a href="peaceful.html" style="background: white; color: #1e90ff; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold;">Tìm Bình Yên Nội Tâm</a>
         </div>
     </main>
 
