--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thế Giới Cảm Xúc - Infographic Lung Tung</title>
+    <!-- Preconnect & preload fonts for improved mobile rendering -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Fredoka+One&family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
-</head>
-
+    
 </head>
 <body>
     <!-- Header -->
@@ -407,6 +408,6 @@
     <!-- Footer -->
     <div id="footer-placeholder"></div>
 
-
+    <script src="js/script.js"></script>
 </body>
 </html>
